--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-spinners": "^0.13.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
