--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
+    "react-image-file-resizer": "^0.4.8",
     "react-spinners": "^0.13.7"
   },
   "devDependencies": {
